# queuetify

./: .dockerignore  .env  Dockerfile  Makefile  README.md  build.sh  docker-compose.yaml  run.sh
client/: .gitignore  package-lock.json  package.json  tailwind.config.js  webpack.config.js
client/src/: index.ts  main.ts  session.ts  websocket.ts
client/src/css/: base.css  index.css  session.css
client/src/views/: About.vue  Home.vue  Main.vue
client_backup/: package-lock.json  package.json
client_backup/src/views/: Home.vue  Main.vue  Session.vue
migrations/: 20221008115637_create_sessions_table.sql  20221023093417_create_queues_table.sql  20221025180726_create_queued_tracks_table.sql  20221108120420_create_votes_table.sql
scripts/: init_db.sh  init_redis.sh
server/: .gitignore  Cargo.toml  sqlx-data.json
server/configuration/: base.yaml  local.yaml  production.yaml
server/src/: application.rs  configuration.rs  db.rs  lib.rs  main.rs  middleware.rs  session_agent.rs  session_state.rs  spotify.rs  templates.rs  utils.rs  ws_connection.rs
server/src/controller/: controller.rs  messages.rs  mod.rs  ws_connection.rs
server/src/routes/: callback.rs  context.rs  create.rs  index.rs  join.rs  mod.rs  session.rs  utils.rs  ws.rs
server/src/routes/session/: api.rs  index.rs  logout.rs  mod.rs  ws.rs
server/templates/: index.html  session.html
