[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "server"

[dependencies]
actix-files = "0.6.2"
actix-web = "4"
dotenv = "0.15.0"
env_logger = "0.9.1"
log = "0.4.17"
rspotify = "0.11.5"
serde = "1.0.145"