[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "server"

[dependencies]
actix = "0.13.0"
actix-files = "0.6.2"
actix-session = { version = "0.6", features = ["redis-rs-tls-session"] }
actix-web = "4"
actix-web-actors = "4.1.0"
actix-web-lab = "0.18.4"
anyhow = "1"
config = "0.13.2"
dotenv = "0.15.0"
env_logger = "0.9.1"
lazy_static = "1.4.0"
log = "0.4.17"
rspotify = "0.11.5"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1"
tera = { version = "1", default-features = false }
tokio = { version = "1.21.2", features = ["sync"] }
uuid = { version = "0.8.1", features = ["v4", "serde"] }

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]