[package]
name = "queuetify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "queuetify"

[dependencies]
actix = "0.13.0"
actix-files = "0.6.2"
actix-session = { version = "0.6", features = ["redis-rs-tls-session"] }
actix-web = "4"
actix-web-actors = "4.1.0"
actix-web-lab = "0.18.4"
anyhow = "1"
config = "0.13.2"
dotenv = "0.15.0"
env_logger = "0.9.1"
lazy_static = "1.4.0"
log = "0.4.17"
rspotify = "0.11.5"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
tera = { version = "1", default-features = false }
tokio = "1.21.2"
uuid = { version = "1", features = ["v4", "serde"] }